--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "bootstrap": "^4.1.0",
     "react": "^16.3.2",
+    "react-amap": "^1.2.7",
     "react-bmap": "^1.0.69",
     "react-dom": "^16.3.2",
     "react-scripts": "1.1.4",
