--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "react-amap": "^1.2.7",
     "react-bmap": "^1.0.69",
     "react-dom": "^16.3.2",
+    "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.4",
     "reactstrap": "^5.0.0"
   },
