--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "bootstrap": "^4.1.0",
+    "gh-pages": "^1.1.0",
     "react": "^16.3.2",
     "react-amap": "^1.2.7",
     "react-bmap": "^1.0.69",
@@ -13,9 +14,12 @@
     "reactstrap": "^5.0.0"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
-  }
+  },
+  "homepage": "https://loveacat.github.io/topmedia"
 }
